--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -22,30 +22,18 @@
                {{object.rank}}
              </div>
           </a>
-          {{object.first_name}}
-          {% if object.preferred_name %} ({{ object.preferred_name}}) {% endif %}
-          {{object.last_name}}{% if object.alias %}, aka {{ object.alias}}{% endif %}
+          {% if object.first_name %}
+            {{object.first_name}}
+            {% if object.preferred_name %} ({{ object.preferred_name}}) {% endif %}
+            {{object.last_name}}{% if object.alias %}, aka {{ object.alias}}{% endif %}
+          {% else %}
+            Nameless.  Click the Edit button above!
+          {% endif %}
         </h3>
 
       </div>
       <div class="panel-body">
 
-        <!-- <div class="row">
-          <div class="col-sm-1">
-            Group
-          </div>
-          <div class="col-sm-10">
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 60%;">
-                <span class="sr-only">60% Complete</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-2">
-            X | 1000
-          </div>
-        </div> -->
         <div class="pull-right"> {{object.xp}} | 1000</div>
         <div>
           {% if courses %}
@@ -85,8 +73,8 @@
         <h3 class="panel-title">General</h3>
       </div>
       <div class="panel-body">
-        <p>SN: {{ object.student_number}}</p>
-        <p>Grad: {{ object.grad_year}}</p>
+        <p>Student Number: {% if object.student_number %}{{ object.student_number}}{% else %}<i>None. Edit your profile!</i>{% endif %}</p>
+        <p>Grad Year: {% if object.grad_year %}{{ object.grad_year}}{% else %}<i>None. Edit your profile!</i>{% endif %}</p>
         <p>Account Created: {{ object.datetime_created}} ({{ object.datetime_created|timesince}} ago)</p>
       </div>
      </div> <!--panel -->
