--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-<ul class="nav nav-tabs nav-justified" role="tablist">
+<ul id='quest-tabs' class="nav nav-tabs nav-justified" role="tablist">
   <li role="presentation" class="active">
     <a href="#available" role="tab" data-toggle="tab">
       Available
