--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -5,10 +5,12 @@
     <div class="col-xs-1"></div>
     <div class="col-xs-5">Quest</div>
     <div class="col-xs-1">XP   </div>
-    <div class="col-xs-2">Ave Time</div>
+    <div class="col-xs-2">Campaigns</div>
     <div class="col-xs-3">Status</div>
   </div>
-  <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel-group panel-group-packed"
+    id="accordian-{% if completed %}completed{% else %}inprogress{% endif %}"
+    role="tablist" aria-multiselectable="true">
   {% for s in submissions %}
     <div class="panel
       {% if s.is_awaiting_approval %}panel-warning
@@ -30,7 +32,7 @@
             </div>
             <div class="col-xs-5">{{s.quest.name}}</div>
             <div class="col-xs-1">{{s.quest.xp}}  </div>
-            <div class="col-xs-2">{{s.quest.id}}</div>
+            <div class="col-xs-2">-</div>
             <div class="col-xs-3">
               {% if s.is_approved %}
                 Approved<br/>
