--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -10,13 +10,17 @@
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- Custom styles for this template -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
 
   <!-- Bootstrap Tables! Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.css">
 
   <!-- Bootstrap DateTimePicker Widget -->
   <link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
+
+  <link href="{% static 'css/bootstrap-tour.min.css' %}" rel="stylesheet">
+  <link href="{% static 'css/bootstrap-tour-custom.css' %}" rel="stylesheet">
+
 
 <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
 <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
