--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -23,6 +23,10 @@
     <!-- Custom js -->
     <script src="{% static 'js/custom.js' %}"></script>
 
+    <script src="{% static 'js/bootstrap-tour.min.js' %}"></script>
+
+    <!-- <script src="{% static 'js/intro-tour.js' %}"></script> -->
+
     <script>
 
     $(document).ready(function() {
@@ -99,6 +103,5 @@
         });
       });
     });
-
 
     </script>
