--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -13,22 +13,22 @@
     <img id="logo" src ="{% static 'img/banner.png' %}"  class="img-responsive" alt="Timberline's Digital Hackerspace Logo" />
   </h3>
   <div class="nav list-group hidden-xs" id="lg-menu">
-      <a class="list-group-item
+      <a id="quests-menu" class="list-group-item
         {% if '/quests/' in request.path_info and not '/approvals/' in request.path_info %}active{% endif %}"
         href="{% url 'quests:quests' %}">
         <i class="fa fa-shield fa-fw"></i>&nbsp; Quests
       </a>
-      <a class="list-group-item {% if '/achievements/' in request.path_info %}active{% endif %}"
+      <a id="achievements-menu" class="list-group-item {% if '/achievements/' in request.path_info %}active{% endif %}"
         href="{% url 'badges:list' %}">
         <i class="fa fa-trophy fa-fw"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline shrinktextmore">Acheive...</span>
         <span class="hidden-sm hidden-xs">Achievements</span>
       </a>
-      <a class="list-group-item {% if '/profiles/' in request.path_info %}active{% endif %}"
+      <a id="groups-menu" class="list-group-item {% if '/profiles/' in request.path_info %}active{% endif %}"
         href="{% url 'profiles:profile_list' %}">
         <i class="fa fa-users fa-fw"></i>&nbsp; Group
       </a>
-      <a class="list-group-item {% if '/announcements/' in request.path_info %}active{% endif %}"
+      <a id="announcements-menu" class="list-group-item {% if '/announcements/' in request.path_info %}active{% endif %}"
         href="{% url 'announcements:list' %}">
         <i class="fa fa-newspaper-o fa-fw"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline visible-md-inline shrinktextmore">Announce...</span>
