--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -1,6 +1,11 @@
 .navbar-fixed-top {
   margin-bottom: 0px !important;
+}
 
+.navbar-text-large {
+  font-size: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .jumbotron {
