Add categories to quest lists

--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -5,7 +5,7 @@
     <div class="col-xs-1"></div>
     <div class="col-xs-4">Quest</div>
     <div class="col-xs-1">XP   </div>
-    <div class="col-xs-1">Ave</div>
+    <div class="col-xs-1">q.id</div>
     <div class="col-xs-2">User</div>
     <div class="col-xs-3">Completed</div>
   </div>
