--- a/src/badges/templates/badges/badge_confirm_delete.html
+++ b/src/badges/templates/badges/badge_confirm_delete.html
@@ -10,7 +10,7 @@
     <p>Badge Name: {{object.name}}</p>
     <p>Badge ID: {{object.id}}</p>
   </div>
-  <a href="{% url 'badges:detail' object.id %}" role="button" class="btn btn-info">Cancel</a>
+  <a href="{% url 'badges:list' %}" role="button" class="btn btn-info">Cancel</a>
   <input type="submit" value="Delete" class="btn btn-danger" />
 </form>
 {% endblock %}
